2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
    * Adding gammas in the ranking. Can choose the plot style, see README "RankingPlot" option for Job
    * Fixed "StatOnly: TRUE" now correctly exclude MC stat when fitting (not added for limit and sig yet)
    
2016-08-31 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed bug causing crash when drawing regions with 0 data events

2016-07-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Nominal smoothing stat uncertainty fixed
    * Few additional options for MultiFit
    * Small fixes toward ICHEP
    
2016-07-21 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed stat uncertainty for nominal smoothing
    * Added ttHbb ICHEP CONF note style options
    * Added option to skip normalisation (so shape only) for systematics (in some regions or for samples only, or everywhere, with "all")
    * Added plot comparing norm factors in MultiFit
    
2016-07-19 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed procedure to set to 1e-6 the negative bins: now it preserves the original yield (setting it to flat 1e-6 in case it's negative)
    * Added option to hide a NP from pull and correlation matrix plots
    * Added Category for NormFactors
    * Added config option for Suffix (before only from command line)
    
2016-07-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Nominal smoothing modified: removed the functionality which sets histograms to constant in some cases (creating issues)

2016-07-12 Will Breaden Madden <w.bm@cern.ch>
    * run.py
        * add warning comparison for cores configuration and cores detected
        * add executable filename command line argument
        * tidy
    * ChangeLog
        * remove tabs
        * change eight-spaces to four-spaces

2016-07-12 Will Breaden Madden <w.bm@cern.ch>
    * remove run.sh, a simple example run script
    * add run.py, a less simple example run script

2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>